@@ -1,4 +1,7 @@
-$Id: CHANGES,v 1.31 2004/10/26 05:30:34 psavola Exp $
+$Id: CHANGES,v 1.32 2004/12/15 06:54:38 psavola Exp $
+
+12/15/2004	Advertise zero Router Lifetime when shutting down;
+		implements a SHOULD in RFC2461 section 6.2.5.
 
 10/16/2004	Update Mobile IPv6 to match RFC 3775, from Greg Daley.
 
